missed all the models to domain renaming

--- a/TimesheetManagement/TimesheetManagement/Views/AddNotification/Add.cshtml
+++ b/TimesheetManagement/TimesheetManagement/Views/AddNotification/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model TimesheetManagement.Models.NotificationsTB
+﻿@model TimesheetManagement.Domain.NotificationsTB
 
 @{
     ViewBag.Title = "Add";
