--- a/TimesheetManagement/TimesheetManagement/Views/AllTimeSheet/Details.cshtml
+++ b/TimesheetManagement/TimesheetManagement/Views/AllTimeSheet/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model TimesheetManagement.Models.MainTimeSheetView
+﻿@model TimesheetManagement.Domain.MainTimeSheetView
 
 @{
     ViewBag.Title = "Details";
