--- a/TimesheetManagement/TimesheetManagement/Views/DemoAssign/Index.cshtml
+++ b/TimesheetManagement/TimesheetManagement/Views/DemoAssign/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model TimesheetManagement.Models.AssignRolesModel
+﻿@model TimesheetManagement.Domain.AssignRolesModel
 @{
     Layout = "~/Views/Shared/_LayoutSuperAdmin.cshtml";
 
