--- a/TimesheetManagement/TimesheetManagement/Views/ExpenseExport/Report.cshtml
+++ b/TimesheetManagement/TimesheetManagement/Views/ExpenseExport/Report.cshtml
@@ -1,4 +1,4 @@
-﻿@model TimesheetManagement.Models.ExpenseExcelExportModel
+﻿@model TimesheetManagement.Domain.ExpenseExcelExportModel
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
