--- a/TimesheetManagement/TimesheetManagement/Views/Login/Login.cshtml
+++ b/TimesheetManagement/TimesheetManagement/Views/Login/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model TimesheetManagement.Models.LoginViewModel
+﻿@model TimesheetManagement.Domain.LoginViewModel
 @{
     ViewBag.Title = "Login";
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
