--- a/TimesheetManagement/TimesheetManagement/Views/Project/Add.cshtml
+++ b/TimesheetManagement/TimesheetManagement/Views/Project/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model TimesheetManagement.Models.ProjectMaster
+﻿@model TimesheetManagement.Domain.ProjectMaster
 @{
     ViewBag.Title = "Add";
     Layout = "~/Views/Shared/_LayoutSuperAdmin.cshtml";
