--- a/TimesheetManagement/TimesheetManagement/Views/Shared/_UserDetails.cshtml
+++ b/TimesheetManagement/TimesheetManagement/Views/Shared/_UserDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@model TimesheetManagement.Models.RegistrationViewDetailsModel
+﻿@model TimesheetManagement.Domain.RegistrationViewDetailsModel
 <div class="panel panel-default">
     <div class="panel-heading"></div>
     <div class="panel-body">
