--- a/TimesheetManagement/TimesheetManagement/Views/SuperAdmin/AssignRoles.cshtml
+++ b/TimesheetManagement/TimesheetManagement/Views/SuperAdmin/AssignRoles.cshtml
@@ -1,4 +1,4 @@
-﻿@model TimesheetManagement.Models.AssignRolesModel
+﻿@model TimesheetManagement.Domain.AssignRolesModel
 @{
     ViewBag.Title = "AssignRoles";
     Layout = "~/Views/Shared/_LayoutSuperAdmin.cshtml";
