--- a/TimesheetManagement/TimesheetManagement/Views/SuperAdmin/CreateAdmin.cshtml
+++ b/TimesheetManagement/TimesheetManagement/Views/SuperAdmin/CreateAdmin.cshtml
@@ -1,4 +1,4 @@
-﻿@model TimesheetManagement.Models.Registration
+﻿@model TimesheetManagement.Domain.Registration
 @{
     ViewBag.Title = "CreateAdmin";
     Layout = "~/Views/Shared/_LayoutSuperAdmin.cshtml";
