--- a/TimesheetManagement/TimesheetManagement/Views/TimeSheet/Add.cshtml
+++ b/TimesheetManagement/TimesheetManagement/Views/TimeSheet/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model TimesheetManagement.Models.TimeSheetModel
+﻿@model TimesheetManagement.Domain.TimeSheetModel
 @{
     ViewBag.Title = "Add";
     Layout = "~/Views/Shared/_LayoutTimeSheet.cshtml";
