--- a/TimesheetManagement/TimesheetManagement/Views/TimeSheetExport/Report.cshtml
+++ b/TimesheetManagement/TimesheetManagement/Views/TimeSheetExport/Report.cshtml
@@ -1,4 +1,4 @@
-﻿@model TimesheetManagement.Models.TimeSheetExcelExportModel
+﻿@model TimesheetManagement.Domain.TimeSheetExcelExportModel
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
