--- a/TimesheetManagement/TimesheetManagement/Views/TimeSheetExport/TimeSheetReport.cshtml
+++ b/TimesheetManagement/TimesheetManagement/Views/TimeSheetExport/TimeSheetReport.cshtml
@@ -1,4 +1,4 @@
-﻿@model TimesheetManagement.Models.TimeSheetExportUserModel
+﻿@model TimesheetManagement.Domain.TimeSheetExportUserModel
 @{
     ViewBag.Title = "TimeSheetReport";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
