--- a/TimesheetManagement/TimesheetManagement/Views/UserProfile/ChangePassword.cshtml
+++ b/TimesheetManagement/TimesheetManagement/Views/UserProfile/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model TimesheetManagement.Models.ChangePasswordModel
+﻿@model TimesheetManagement.Domain.ChangePasswordModel
 
 @{
     ViewBag.Title = "ChangePassword";
