--- a/TimesheetManagement/TimesheetManagement/Views/Registration/Registration.cshtml
+++ b/TimesheetManagement/TimesheetManagement/Views/Registration/Registration.cshtml
@@ -1,4 +1,4 @@
-﻿@model TimesheetManagement.Models.Registration
+﻿@model TimesheetManagement.Domain.Registration
 @{
     Layout = "~/Views/Shared/_LayoutSuperAdmin.cshtml";
 }
